--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.2.1",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
+    "i18next": "^22.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5"
   },
