--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -33,6 +34,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^29.4.1",
